--- a/package.json
+++ b/package.json
@@ -12,9 +12,17 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "bcrypt": "^5.1.1",
     "cors": "^2.8.5",
     "dotenv": "^16.4.1",
+    "express-fileupload": "^1.4.3",
+    "jsonwebtoken": "^9.0.2",
+    "mongoose": "^8.1.1",
+    "mongoose-unique-validator": "^5.0.0",
+    "order-id": "^2.1.2"
+  },
+  "devDependencies": {
     "express": "^4.18.2",
-    "mongoose": "^8.1.1"
+    "multer": "^1.4.5-lts.1"
   }
 }
