--- a/package.json
+++ b/package.json
@@ -15,7 +15,9 @@
     "bcrypt": "^5.1.1",
     "cors": "^2.8.5",
     "dotenv": "^16.4.1",
+    "express-async-errors": "^3.1.1",
     "express-fileupload": "^1.4.3",
+    "http-status-codes": "^2.3.0",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.1.1",
     "mongoose-unique-validator": "^5.0.0",
